[workspace]
members = [
    "riscv-instruction",
    "riscv-instruction-macros",
    "riscv-instruction-parser",
    "riscv-instruction-types",
]
resolver = "3"

[workspace.package]
authors = ["canxin121"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/canxin121/riscv-instruction-crates"
homepage = "https://github.com/canxin121/riscv-instruction-crates"
description = "RISC-V instruction assembly library"

[workspace.dependencies]
syn = { version = "2.0.102", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
heck = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
chrono = "0.4.41"
serde_yaml = "0.9.34-deprecated"
enum-iterator = "2.1.0"