[package]
name = "riscv-instruction-macros"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
heck.workspace = true
serde.workspace = true
serde_json.workspace = true

[lib]
proc-macro = true
