[package]
name = "riscv-instruction-types"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "RISC-V instruction types"

[dependencies]
rand.workspace = true
riscv-instruction-macros = { path = "../riscv-instruction-macros" }
