[package]
name = "riscv-instruction"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
riscv-instruction-macros = { path = "../riscv-instruction-macros" }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
